# rusty-chip8

./: Cargo.toml  README.md
src/: chip.rs  dump.rs  instructions.rs  lib.rs  main.rs
