[package]
name = "rusty-chip8"
version = "0.2.0"
description = "Chip8 Emulator"
edition = "2021"
default-run = "rusty-chip8"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
colored = "2.1.0"
fastrand = "2.3.0"
minifb = { version = "0.28.0", default-features = false, features = ["x11"] }

[features]
shift = []
